tests/ui/dst/dst-sized-trait-param.stderr
error[E0277]: the size for values of type `[isize]` cannot be known at compilation time
  --> $DIR/dst-sized-trait-param.rs:7:6
   |
LL | impl Foo<[isize]> for usize { }
   |      ^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[isize]`
note: required by an implicit `Sized` bound in `Foo`
  --> $DIR/dst-sized-trait-param.rs:5:11
   |
LL | trait Foo<T> : Sized { fn take(self, x: &T) { } } // Note: T is sized
   |           ^ required by the implicit `Sized` requirement on this type parameter in `Foo`
help: consider relaxing the implicit `Sized` restriction
   |
LL | trait Foo<T: ?Sized> : Sized { fn take(self, x: &T) { } } // Note: T is sized
   |            ++++++++

error[E0277]: the size for values of type `[usize]` cannot be known at compilation time
  --> $DIR/dst-sized-trait-param.rs:10:21
   |
LL | impl Foo<isize> for [usize] { }
   |                     ^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[usize]`
note: required by a bound in `Foo`
  --> $DIR/dst-sized-trait-param.rs:5:16
   |
LL | trait Foo<T> : Sized { fn take(self, x: &T) { } } // Note: T is sized
   |                ^^^^^ required by this bound in `Foo`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
